// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PasswordInput /> should render PasswordInput 1`] = `
<View
  style={
    [
      {},
      {},
    ]
  }
>
  <View
    style={
      [
        {
          "justifyContent": "flex-start",
          "paddingTop": 0,
          "position": "relative",
        },
        {},
      ]
    }
  >
    <View
      leftIcon={false}
      rightIcon={true}
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
            "maxWidth": "100%",
            "overflow": "hidden",
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          },
        ]
      }
    >
      <TextInput
        accessibilityHint="Digite o texto"
        accessibilityLabel="test"
        accessibilityLiveRegion="polite"
        accessibilityRole="text"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
          }
        }
        accessible={true}
        allowFontScaling={false}
        autoFocus={false}
        centered={false}
        contrast={false}
        editable={true}
        iconTouchableEnabled={true}
        id="test"
        isPlaceholder={false}
        keyboardType="default"
        large={false}
        multiline={false}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        options={
          {
            "mask": "****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************",
          }
        }
        placeholderTextColor="#999999"
        secureTextEntry={true}
        status="default"
        style={
          [
            {
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
            },
            {},
          ]
        }
        testID="test"
        textContentType="password"
        type="custom"
        underlineColorAndroid="transparent"
        value=""
        variant="md"
        withBottomline={true}
      />
      <View
        collapsable={false}
        style={{}}
      >
        <View
          accessibilityLabel="Eye"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          hitSlop={
            {
              "bottom": 25,
              "left": 25,
              "right": 25,
              "top": 25,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
          testID="icon_eye"
        >
          <View>
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                [
                  {
                    "color": "#4255EF",
                    "fontSize": 16,
                  },
                  undefined,
                  {
                    "fontFamily": "FontAwesome5Free-Regular",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {
                    "fontWeight": "400",
                  },
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      contrast={false}
      status="default"
      style={
        [
          {
            "backgroundColor": "#444444",
            "height": 0.5,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`<PasswordInput /> should render floating password input 1`] = `
<View
  style={
    [
      {},
      {},
    ]
  }
>
  <View
    style={
      [
        {
          "justifyContent": "flex-start",
          "paddingTop": 0,
          "position": "relative",
        },
        {},
      ]
    }
  >
    <View
      borderedColor="#999999"
      borderedHeight={65}
      borderedRadius={8}
      borderedWidth={1.5}
      error={false}
      isFloating={true}
      showBorderErrored={true}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderColor": "#999999",
            "borderRadius": 8,
            "borderStyle": "solid",
            "borderWidth": 1.5,
            "height": 65,
            "justifyContent": "center",
            "paddiingTop": 0,
            "paddingLeft": 16,
            "paddingRight": 16,
          },
        ]
      }
      testID="bordered-wrapper"
    >
      <View
        hasBottomLine={false}
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "height": "auto",
              "width": "100%",
            },
          ]
        }
      >
        <View
          hasLeftIcon={false}
          isFloating={true}
          style={
            [
              {
                "flexDirection": "column",
                "marginLeft": 0,
                "paddingBottom": 0,
                "paddingLeft": 4,
                "paddingRight": 4,
                "paddingTop": 0,
                "width": "92%",
              },
            ]
          }
        >
          <TextInput
            accessibilityHint="Digite o texto"
            accessibilityLabel="Senha"
            accessibilityLiveRegion="polite"
            accessibilityRole="text"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
              }
            }
            accessible={true}
            allowFontScaling={false}
            autoFocus={false}
            centered={false}
            contrast={false}
            editable={true}
            iconTouchableEnabled={true}
            id="test-floating"
            isPlaceholder={true}
            keyboardType="default"
            large={false}
            multiline={false}
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            options={
              {
                "mask": "****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************",
              }
            }
            placeholderTextColor="#999999"
            secureTextEntry={true}
            status="default"
            style={
              [
                {
                  "flexBasis": 0,
                  "flexGrow": 1,
                  "flexShrink": 1,
                },
                {
                  "color": "#444444",
                  "fontSize": 17,
                  "paddingBottom": 5,
                },
              ]
            }
            testID="input_test-floating"
            textContentType="password"
            type="custom"
            underlineColorAndroid="transparent"
            value=""
            variant="md"
            withBottomline={false}
          />
        </View>
        <View
          collapsable={false}
          style={{}}
        >
          <View
            accessibilityLabel="Eye"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            hitSlop={
              {
                "bottom": 25,
                "left": 25,
                "right": 25,
                "top": 25,
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
            testID="icon_eye"
          >
            <View>
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  [
                    {
                      "color": "#4255EF",
                      "fontSize": 18,
                    },
                    undefined,
                    {
                      "fontFamily": "FontAwesome5Free-Regular",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {
                      "fontWeight": "400",
                    },
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
